--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Setup Ruby, JRuby and TruffleRuby
         uses: ruby/setup-ruby@v1.90.0
+        with:
+          ruby-version: latest
+          bundler: latest
       - run: |
           ${{ github.event.inputs.command }}
           git config user.name github-actions
